add host verification via dns
